# cpp-otus.08.nickname

./: .travis.yml  CMakeLists.txt  Readme.md  codepage-manager.h  main.cpp  nickname.h  node.h  share.h  tests-utils.h  tests.cpp  utf8-utils.h
tests/: logins-cp1251.txt  names-short.txt  names.txt  simple-tree.txt
tests/results/: alek.txt  aleks.txt  aleksey.txt  alesha.txt  maksim.txt  sasha.txt
